--- a/index.html
+++ b/index.html
@@ -1,104 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
-  <title>E-Ticaret Sitesi</title>
-
-  <!-- 💄 Kart Stili -->
-  <style>
-    body {
-      background-color: #f5f5f5;
-      font-family: Arial, sans-serif;
-    }
-
-    #product-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding: 20px;
-      justify-content: center;
-    }
-
-    .product-card {
-      width: 250px;
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
-      background-color: #fff;
-      text-align: center;
-    }
-
-    .product-card:hover {
-      transform: scale(1.03);
-    }
-
-    .product-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .product-card h3 {
-      margin: 10px 0 5px;
-      font-size: 18px;
-    }
-
-    .product-card p {
-      font-size: 14px;
-      color: #555;
-      padding: 0 10px;
-    }
-
-    .product-card strong {
-      display: block;
-      margin: 10px 0 15px;
-      font-size: 16px;
-      color: #008000;
-    }
-  </style>
-
-  <!-- 🔌 Firebase Bağlantısı ve Ürün Listeleme -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDgg5kN1ia6oyx5HUeVxQrmzNRe2h1wD-s",
-      authDomain: "eticaretweb-7f739.firebaseapp.com",
-      projectId: "eticaretweb-7f739",
-      storageBucket: "eticaretweb-7f739.appspot.com",
-      messagingSenderId: "196675133617",
-      appId: "1:196675133617:web:cd1775ae6df31b191d0290"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    async function getProducts() {
-      const querySnapshot = await getDocs(collection(db, "products"));
-      const container = document.getElementById("product-list");
-
-      querySnapshot.forEach((doc) => {
-        const data = doc.data();
-        const card = `
-          <div class="product-card">
-            <img src="${data.image}" />
-            <h3>${data.name}</h3>
-            <p>${data.description}</p>
-            <strong>${data.price} TL</strong>
-          </div>
-        `;
-        container.innerHTML += card;
-      });
-    }
-
-    getProducts();
-  </script>
+  <meta charset="UTF-8">
+  <title>Tişört Mağazası</title>
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
-
 <body>
-  <h1 style="text-align:center; margin-top: 20px;">Ürünler</h1>
-  <div id="product-list"></div>
+  <div class="super-banner">
+    <div class="banner-icon-area">
+      <img src="https://cdn-icons-png.flaticon.com/512/189/189792.png" alt="Kampanya" id="banner-icon">
+    </div>
+    <div class="banner-texts">
+      <div class="banner-baslik" id="banner-baslik">Süper Fırsat!</div>
+      <div class="banner-aciklama" id="banner-aciklama">Stoklarla sınırlı süper indirim! 👕</div>
+    </div>
+  </div>
+  
+  <main>
+    <h1 class="site-title">En Yeni Tişörtler</h1>
+    <div class="tisortler-grid" id="tisortler-grid">
+      <!-- Tişörtler buraya JS ile eklenecek -->
+    </div>
+  </main>
+
+  <a href="sepet.html" class="sepet-btn">
+    <i class="fa-solid fa-basket-shopping"></i> Sepetim
+  </a>
+
+  <script src="index.js" type="module"></script><a href="tel:05350592939" class="destek-btn" title="Destek Hattı - Aramak için tıkla!">
+    <i class="fa-solid fa-headset"></i> Destek
+  </a>
+  
 </body>
 </html>
